fixed stackoverflow error for images + fixed miles leaderboard showing only 20 people + removed userIsAuthor check from shopitems since it slows things down _a lot_

--- a/src/main/web/src/app/club-management/order-overview/order-overview.component.scss
+++ b/src/main/web/src/app/club-management/order-overview/order-overview.component.scss
@@ -70,7 +70,7 @@ $options-breakpoint: 850px;
 	justify-content: space-between;
 	padding: 1rem;
 	margin: 0;
-	border-bottom: 1px solid #cdcdcdcd;
+	border-bottom: 1px solid #cdcdcd;
 	background: white;
 	align-items: center;
 
